--- a/sources/config-serif-display.yaml
+++ b/sources/config-serif-display.yaml
@@ -4,4 +4,4 @@ category:
 familyName: Noto Serif Display
 googleFonts: true
 sources:
-- NotoSerifDisplay-ItalicMM.glyphs
+- NotoSerifDisplay-Italic.glyphs
