Rename U+1ACC-1ACE to ginsularcomb, etc., resize

--- a/sources/NotoSans-Italic.glyphspackage/order.plist
+++ b/sources/NotoSans-Italic.glyphspackage/order.plist
@@ -3292,6 +3292,7 @@ ecomb,
 ethcomb,
 flattenedopenaabovecomb,
 gcomb,
+ginsularcomb,
 hcomb,
 icomb,
 insulardcomb,
@@ -3303,9 +3304,11 @@ ncomb,
 ocomb,
 rbelowcomb,
 rcomb,
+rinsularcomb,
 rrotundacomb,
 scomb,
 tcomb,
+tinsularcomb,
 ucomb,
 vcomb,
 xcomb,
@@ -3799,9 +3802,6 @@ uni1AC8,
 uni1AC9,
 uni1ACA,
 uni1ACB,
-uni1ACC,
-uni1ACD,
-uni1ACE,
 uni2E53,
 uni2E54,
 uni2E55,
