--- a/sources/NotoSansMono.glyphspackage/order.plist
+++ b/sources/NotoSansMono.glyphspackage/order.plist
@@ -3743,6 +3743,7 @@ ecomb,
 ethcomb,
 flattenedopenaabovecomb,
 gcomb,
+ginsularcomb,
 hcomb,
 icomb,
 insulardcomb,
@@ -3754,9 +3755,11 @@ ncomb,
 ocomb,
 rbelowcomb,
 rcomb,
+rinsularcomb,
 rrotundacomb,
 scomb,
 tcomb,
+tinsularcomb,
 ucomb,
 vcomb,
 xcomb,
@@ -3803,9 +3806,6 @@ uni1AC8,
 uni1AC9,
 uni1ACA,
 uni1ACB,
-uni1ACC,
-uni1ACD,
-uni1ACE,
 som,
 uni2E53,
 uni2E54,
