--- a/sources/NotoSerif.glyphspackage/order.plist
+++ b/sources/NotoSerif.glyphspackage/order.plist
@@ -3122,6 +3122,7 @@ ecomb,
 ethcomb,
 flattenedopenaabovecomb,
 gcomb,
+ginsularcomb,
 hcomb,
 icomb,
 insulardcomb,
@@ -3133,9 +3134,11 @@ ncomb,
 ocomb,
 rbelowcomb,
 rcomb,
+rinsularcomb,
 rrotundacomb,
 scomb,
 tcomb,
+tinsularcomb,
 ucomb,
 vcomb,
 xcomb,
@@ -3725,9 +3728,6 @@ uni1AC8,
 uni1AC9,
 uni1ACA,
 uni1ACB,
-uni1ACC,
-uni1ACD,
-uni1ACE,
 som,
 uni2E53,
 uni2E54,
