--- a/sources/NotoSans.glyphspackage/order.plist
+++ b/sources/NotoSans.glyphspackage/order.plist
@@ -2938,6 +2938,7 @@ ecomb,
 ethcomb,
 flattenedopenaabovecomb,
 gcomb,
+ginsularcomb,
 hcomb,
 icomb,
 insulardcomb,
@@ -2949,9 +2950,11 @@ ncomb,
 ocomb,
 rbelowcomb,
 rcomb,
+rinsularcomb,
 rrotundacomb,
 scomb,
 tcomb,
+tinsularcomb,
 ucomb,
 vcomb,
 xcomb,
@@ -3788,9 +3791,6 @@ uni1AC8,
 uni1AC9,
 uni1ACA,
 uni1ACB,
-uni1ACC,
-uni1ACD,
-uni1ACE,
 som,
 uni2E53,
 uni2E54,
