--- a/sources/NotoSerif-Italic.glyphspackage/order.plist
+++ b/sources/NotoSerif-Italic.glyphspackage/order.plist
@@ -3231,6 +3231,7 @@ ecomb,
 ethcomb,
 flattenedopenaabovecomb,
 gcomb,
+ginsularcomb,
 hcomb,
 icomb,
 insulardcomb,
@@ -3242,9 +3243,11 @@ ncomb,
 ocomb,
 rbelowcomb,
 rcomb,
+rinsularcomb,
 rrotundacomb,
 scomb,
 tcomb,
+tinsularcomb,
 ucomb,
 vcomb,
 xcomb,
@@ -3736,9 +3739,6 @@ uni1AC8,
 uni1AC9,
 uni1ACA,
 uni1ACB,
-uni1ACC,
-uni1ACD,
-uni1ACE,
 uni2E53,
 uni2E54,
 uni2E55,
