--- a/sources/NotoSans.glyphspackage/order.plist
+++ b/sources/NotoSans.glyphspackage/order.plist
@@ -1596,6 +1596,7 @@ aktieselskab,
 fturned,
 onethird,
 twothirds,
+"Onehundredreversed-roman",
 creversed,
 dottedCircle,
 Ldoublebar,
@@ -2938,7 +2939,6 @@ ecomb,
 ethcomb,
 flattenedopenaabovecomb,
 gcomb,
-ginsularcomb,
 hcomb,
 icomb,
 insulardcomb,
@@ -2950,11 +2950,9 @@ ncomb,
 ocomb,
 rbelowcomb,
 rcomb,
-rinsularcomb,
 rrotundacomb,
 scomb,
 tcomb,
-tinsularcomb,
 ucomb,
 vcomb,
 xcomb,
@@ -3791,6 +3789,9 @@ uni1AC8,
 uni1AC9,
 uni1ACA,
 uni1ACB,
+ginsularcomb,
+rinsularcomb,
+tinsularcomb,
 som,
 uni2E53,
 uni2E54,
