--- a/sources/NotoSansMono.glyphspackage/order.plist
+++ b/sources/NotoSansMono.glyphspackage/order.plist
@@ -1884,6 +1884,7 @@ aktieselskab,
 fturned,
 onethird,
 twothirds,
+"Onehundredreversed-roman",
 creversed,
 leftArrow,
 upArrow,
@@ -3743,7 +3744,6 @@ ecomb,
 ethcomb,
 flattenedopenaabovecomb,
 gcomb,
-ginsularcomb,
 hcomb,
 icomb,
 insulardcomb,
@@ -3755,11 +3755,9 @@ ncomb,
 ocomb,
 rbelowcomb,
 rcomb,
-rinsularcomb,
 rrotundacomb,
 scomb,
 tcomb,
-tinsularcomb,
 ucomb,
 vcomb,
 xcomb,
@@ -3806,6 +3804,9 @@ uni1AC8,
 uni1AC9,
 uni1ACA,
 uni1ACB,
+ginsularcomb,
+rinsularcomb,
+tinsularcomb,
 som,
 uni2E53,
 uni2E54,
