--- a/sources/NotoSansMono.glyphspackage/fontinfo.plist
+++ b/sources/NotoSansMono.glyphspackage/fontinfo.plist
@@ -1,5 +1,5 @@
 {
-.appVersion = "3141";
+.appVersion = "3180";
 .formatVersion = 3;
 axes = (
 {
@@ -1907,6 +1907,7 @@ aktieselskab,
 fturned,
 onethird,
 twothirds,
+"Onehundredreversed-roman",
 creversed,
 leftArrow,
 upArrow,
