--- a/sources/NotoSerif.glyphspackage/fontinfo.plist
+++ b/sources/NotoSerif.glyphspackage/fontinfo.plist
@@ -1,5 +1,5 @@
 {
-.appVersion = "3141";
+.appVersion = "3180";
 .formatVersion = 3;
 axes = (
 {
@@ -1906,6 +1906,7 @@ aktieselskab,
 fturned,
 onethird,
 twothirds,
+"Onehundredreversed-roman",
 creversed,
 dottedCircle,
 Ldoublebar,
