--- a/sources/NotoSerif.glyphspackage/order.plist
+++ b/sources/NotoSerif.glyphspackage/order.plist
@@ -1883,6 +1883,7 @@ aktieselskab,
 fturned,
 onethird,
 twothirds,
+"Onehundredreversed-roman",
 creversed,
 dottedCircle,
 Ldoublebar,
@@ -3122,7 +3123,6 @@ ecomb,
 ethcomb,
 flattenedopenaabovecomb,
 gcomb,
-ginsularcomb,
 hcomb,
 icomb,
 insulardcomb,
@@ -3134,11 +3134,9 @@ ncomb,
 ocomb,
 rbelowcomb,
 rcomb,
-rinsularcomb,
 rrotundacomb,
 scomb,
 tcomb,
-tinsularcomb,
 ucomb,
 vcomb,
 xcomb,
@@ -3728,6 +3726,9 @@ uni1AC8,
 uni1AC9,
 uni1ACA,
 uni1ACB,
+ginsularcomb,
+rinsularcomb,
+tinsularcomb,
 som,
 uni2E53,
 uni2E54,
