--- a/sources/NotoSerif.glyphspackage/order.plist
+++ b/sources/NotoSerif.glyphspackage/order.plist
@@ -3686,6 +3686,7 @@ omegapsiliperispomeniypogegrammeni.sc.ad.ss06,
 omegadasiaperispomeniypogegrammeni.sc.ad.ss06,
 omegaperispomeniypogegrammeni.sc.ad.ss06,
 anoteleia.sc,
+"paragraph-georgian",
 minus,
 tonos.case,
 psili.case,
