--- a/sources/NotoSerif.glyphspackage/order.plist
+++ b/sources/NotoSerif.glyphspackage/order.plist
@@ -3685,6 +3685,7 @@ omegadasiaoxiaypogegrammeni.sc.ad.ss06,
 omegapsiliperispomeniypogegrammeni.sc.ad.ss06,
 omegadasiaperispomeniypogegrammeni.sc.ad.ss06,
 omegaperispomeniypogegrammeni.sc.ad.ss06,
+zero.osf.slash,
 anoteleia.sc,
 "paragraph-georgian",
 minus,
