--- a/sources/NotoSerif.glyphspackage/fontinfo.plist
+++ b/sources/NotoSerif.glyphspackage/fontinfo.plist
@@ -4656,7 +4656,10 @@ tag = rtlm;
 },
 {
 code = "# zero.slash alternate
-    sub zero by zero.slash;";
+    sub zero by zero.slash;
+	sub zero.lf by zero.slash;
+	sub zero.osf by zero.osf.slash;
+	sub zero.tosf by zero.osf.slash;";
 tag = zero;
 },
 {
