Remove erroneous U+11AB0/11AB1 glyphs, fixes #405

--- a/sources/NotoSans.glyphspackage/order.plist
+++ b/sources/NotoSans.glyphspackage/order.plist
@@ -3782,6 +3782,7 @@ psilioxia_brevecomb,
 psilioxia_macronmod,
 dasiaoxia_brevecomb,
 dasiaoxia_macronmod,
+zero.osf.slash,
 "paragraph-georgian",
 minus,
 uni1AC5,
@@ -3875,8 +3876,6 @@ u107B7,
 u107B8,
 u107B9,
 u107BA,
-u11AB0,
-u11AB1,
 uni1DF00,
 uni1DF01,
 uni1DF02,
@@ -3910,6 +3909,5 @@ u1DF1D,
 u1DF1E,
 uniA7D2,
 uniA7D4,
-uni1DF1Adotless,
-zero.osf.slash
+uni1DF1Adotless
 )
