--- a/sources/NotoSansMono.glyphspackage/order.plist
+++ b/sources/NotoSansMono.glyphspackage/order.plist
@@ -2072,6 +2072,7 @@ Vend,
 Et,
 Is,
 Con,
+Con,
 Dinsular,
 Finsular,
 Ginsular,
@@ -3890,8 +3891,6 @@ u107B7,
 u107B8,
 u107B9,
 u107BA,
-u11AB0,
-u11AB1,
 uni1DF00,
 uni1DF01,
 uni1DF02,
