Fixes component issues and interpolation errors #412

--- a/sources/NotoSansMono.glyphspackage/order.plist
+++ b/sources/NotoSansMono.glyphspackage/order.plist
@@ -3799,6 +3799,13 @@ wturnedmod,
 lefttackmod,
 righttackmod,
 "paragraph-georgian",
+cyrillicbreve,
+cyrillicbreve.cap,
+dieresiscomb.loclCYR,
+acutecomb.loclCYR,
+dieresiscomb.loclCYR.cap,
+acutecomb.loclCYR.cap,
+gravecomb.loclCYR,
 uni1AC5,
 uni1AC7,
 uni1AC8,
@@ -3923,8 +3930,5 @@ u1DF1D,
 u1DF1E,
 uniA7D2,
 uniA7D4,
-uni1DF1Adotless,
-cyrillicbreve,
-cyrillicbreve.cap,
-gravecomb.loclCYR
+uni1DF1Adotless
 )
