--- a/sources/NotoSans-Italic.glyphspackage/order.plist
+++ b/sources/NotoSans-Italic.glyphspackage/order.plist
@@ -3372,6 +3372,7 @@ rmiddletildeturned,
 wturnedmod,
 lefttackmod,
 righttackmod,
+aa.pcap,
 Alphaprosgegrammeni.ad,
 Alphapsiliprosgegrammeni.ad,
 Alphadasiaprosgegrammeni.ad,
