--- a/sources/NotoSans.glyphspackage/order.plist
+++ b/sources/NotoSans.glyphspackage/order.plist
@@ -3782,6 +3782,7 @@ psilioxia_brevecomb,
 psilioxia_macronmod,
 dasiaoxia_brevecomb,
 dasiaoxia_macronmod,
+aa.pcap,
 zero.osf.slash,
 "paragraph-georgian",
 minus,
