--- a/sources/NotoSerif-Italic.glyphspackage/order.plist
+++ b/sources/NotoSerif-Italic.glyphspackage/order.plist
@@ -3309,6 +3309,7 @@ rmiddletildeturned,
 wturnedmod,
 lefttackmod,
 righttackmod,
+aa.pcap,
 Alphaprosgegrammeni.ad,
 Alphapsiliprosgegrammeni.ad,
 Alphadasiaprosgegrammeni.ad,
