--- a/sources/NotoSerif.glyphspackage/order.plist
+++ b/sources/NotoSerif.glyphspackage/order.plist
@@ -3296,6 +3296,7 @@ rmiddletildeturned,
 wturnedmod,
 lefttackmod,
 righttackmod,
+aa.pcap,
 Alphaprosgegrammeni.ad,
 Alphapsiliprosgegrammeni.ad,
 Alphadasiaprosgegrammeni.ad,
