Keep Fstroke.hist in aalt

--- a/sources/NotoSansMono.glyphspackage/fontinfo.plist
+++ b/sources/NotoSansMono.glyphspackage/fontinfo.plist
@@ -4212,7 +4212,9 @@ code = "feature ccmp;
     feature smcp;
     sub Eng by Eng.alt1;
     sub Eng by Eng.alt2;
-    sub Eng by Eng.alt3;";
+    sub Eng by Eng.alt3;
+    sub Fstroke by Fstroke.hist;
+";
 tag = aalt;
 },
 {
