--- a/sources/NotoSerif.glyphspackage/fontinfo.plist
+++ b/sources/NotoSerif.glyphspackage/fontinfo.plist
@@ -3662,7 +3662,9 @@ code = "feature ccmp;
     sub Eng by Eng.alt1;
     sub Eng by Eng.alt2;
     sub Eng by Eng.alt3;
-    sub betaSymbol by betaSymbol.alt;";
+    sub betaSymbol by betaSymbol.alt;
+    sub Fstroke by Fstroke.hist;
+";
 tag = aalt;
 },
 {
