Spacing leftangleabovecomb, add leftangleabovecomb.nonspacing

--- a/sources/NotoSans-Italic.glyphspackage/order.plist
+++ b/sources/NotoSans-Italic.glyphspackage/order.plist
@@ -3068,6 +3068,7 @@ acutebelowcomb,
 lefttackbelowcomb,
 righttackbelowcomb,
 leftangleabovecomb,
+leftangleabovecomb.nonspacing,
 horncomb,
 ringhalfleftbelowcomb,
 uptackbelowcomb,
