--- a/sources/NotoSans.glyphspackage/order.plist
+++ b/sources/NotoSans.glyphspackage/order.plist
@@ -2716,6 +2716,7 @@ acutebelowcomb,
 lefttackbelowcomb,
 righttackbelowcomb,
 leftangleabovecomb,
+leftangleabovecomb.nonspacing,
 horncomb,
 ringhalfleftbelowcomb,
 uptackbelowcomb,
