--- a/sources/NotoSansMono.glyphspackage/fontinfo.plist
+++ b/sources/NotoSansMono.glyphspackage/fontinfo.plist
@@ -4214,6 +4214,7 @@ code = "feature ccmp;
     sub Eng by Eng.alt2;
     sub Eng by Eng.alt3;
     sub Fstroke by Fstroke.hist;
+    sub leftangleabovecomb by leftangleabovecomb.nonspacing;
 ";
 tag = aalt;
 },
