--- a/sources/NotoSerif-Italic.glyphspackage/fontinfo.plist
+++ b/sources/NotoSerif-Italic.glyphspackage/fontinfo.plist
@@ -3669,7 +3669,9 @@ code = "feature ccmp;
     sub Eng by Eng.alt2;
     sub Eng by Eng.alt3;
     sub betaSymbol by betaSymbol.alt;
-    sub Fstroke by Fstroke.hist;";
+    sub Fstroke by Fstroke.hist;
+    sub leftangleabovecomb by leftangleabovecomb.nonspacing;
+";
 tag = aalt;
 },
 {
