--- a/sources/NotoSerif-Italic.glyphspackage/order.plist
+++ b/sources/NotoSerif-Italic.glyphspackage/order.plist
@@ -3008,6 +3008,7 @@ acutebelowcomb,
 lefttackbelowcomb,
 righttackbelowcomb,
 leftangleabovecomb,
+leftangleabovecomb.nonspacing,
 horncomb,
 ringhalfleftbelowcomb,
 uptackbelowcomb,
