--- a/sources/NotoSerif.glyphspackage/fontinfo.plist
+++ b/sources/NotoSerif.glyphspackage/fontinfo.plist
@@ -3664,6 +3664,7 @@ code = "feature ccmp;
     sub Eng by Eng.alt3;
     sub betaSymbol by betaSymbol.alt;
     sub Fstroke by Fstroke.hist;
+    sub leftangleabovecomb by leftangleabovecomb.nonspacing;
 ";
 tag = aalt;
 },
