--- a/sources/NotoSerif.glyphspackage/order.plist
+++ b/sources/NotoSerif.glyphspackage/order.plist
@@ -2943,6 +2943,7 @@ acutebelowcomb,
 lefttackbelowcomb,
 righttackbelowcomb,
 leftangleabovecomb,
+leftangleabovecomb.nonspacing,
 horncomb,
 ringhalfleftbelowcomb,
 uptackbelowcomb,
