--- a/sources/NotoSansMono.glyphspackage/order.plist
+++ b/sources/NotoSansMono.glyphspackage/order.plist
@@ -3509,6 +3509,7 @@ acutebelowcomb,
 lefttackbelowcomb,
 righttackbelowcomb,
 leftangleabovecomb,
+leftangleabovecomb.nonspacing,
 horncomb,
 ringhalfleftbelowcomb,
 uptackbelowcomb,
