Rename Eopenreversed, eopenreversedmod, part 2

--- a/sources/NotoSansMono.glyphspackage/order.plist
+++ b/sources/NotoSansMono.glyphspackage/order.plist
@@ -1419,7 +1419,7 @@ ezhretroflexhook,
 cmod,
 ccurlmod,
 ethmod,
-ereversedopenmod,
+eopenreversedmod,
 fmod,
 jdotlessstrokemod,
 scriptgmod,
@@ -2089,7 +2089,7 @@ Nobliquestroke,
 Robliquestroke,
 Sobliquestroke,
 Hhook,
-Ereversedopen,
+Eopenreversed,
 Gscript,
 Lbelt,
 Iotaserifed,
