--- a/sources/NotoSans-Italic.glyphspackage/order.plist
+++ b/sources/NotoSans-Italic.glyphspackage/order.plist
@@ -1415,7 +1415,7 @@ ezhretroflexhook,
 cmod,
 ccurlmod,
 ethmod,
-ereversedopenmod,
+eopenreversedmod,
 fmod,
 jdotlessstrokemod,
 scriptgmod,
@@ -2066,7 +2066,7 @@ Nobliquestroke,
 Robliquestroke,
 Sobliquestroke,
 Hhook,
-Ereversedopen,
+Eopenreversed,
 Gscript,
 Lbelt,
 Iotaserifed,
