--- a/sources/NotoSans.glyphspackage/order.plist
+++ b/sources/NotoSans.glyphspackage/order.plist
@@ -1364,7 +1364,7 @@ ezhretroflexhook,
 cmod,
 ccurlmod,
 ethmod,
-ereversedopenmod,
+eopenreversedmod,
 fmod,
 jdotlessstrokemod,
 scriptgmod,
@@ -1748,7 +1748,7 @@ Nobliquestroke,
 Robliquestroke,
 Sobliquestroke,
 Hhook,
-Ereversedopen,
+Eopenreversed,
 Gscript,
 Lbelt,
 Iotaserifed,
