--- a/sources/NotoSerif-Italic.glyphspackage/order.plist
+++ b/sources/NotoSerif-Italic.glyphspackage/order.plist
@@ -1416,7 +1416,7 @@ ezhretroflexhook,
 cmod,
 ccurlmod,
 ethmod,
-ereversedopenmod,
+eopenreversedmod,
 fmod,
 jdotlessstrokemod,
 scriptgmod,
@@ -2071,7 +2071,7 @@ Nobliquestroke,
 Robliquestroke,
 Sobliquestroke,
 Hhook,
-Ereversedopen,
+Eopenreversed,
 Gscript,
 Lbelt,
 Iotaserifed,
