--- a/sources/NotoSerif.glyphspackage/order.plist
+++ b/sources/NotoSerif.glyphspackage/order.plist
@@ -1418,7 +1418,7 @@ ezhretroflexhook,
 cmod,
 ccurlmod,
 ethmod,
-ereversedopenmod,
+eopenreversedmod,
 fmod,
 jdotlessstrokemod,
 scriptgmod,
@@ -2066,7 +2066,7 @@ Nobliquestroke,
 Robliquestroke,
 Sobliquestroke,
 Hhook,
-Ereversedopen,
+Eopenreversed,
 Gscript,
 Lbelt,
 Kturned,
