Add figurespace.tosf, fixes #39

--- a/sources/NotoSans-Italic.glyphspackage/order.plist
+++ b/sources/NotoSans-Italic.glyphspackage/order.plist
@@ -2518,7 +2518,6 @@ Fscript,
 Mscript,
 Bflourish,
 Fstroke,
-Fstroke.hist,
 Aevolapuk,
 Oevolapuk,
 Uevolapuk,
@@ -3068,7 +3067,6 @@ acutebelowcomb,
 lefttackbelowcomb,
 righttackbelowcomb,
 leftangleabovecomb,
-leftangleabovecomb.nonspacing,
 horncomb,
 ringhalfleftbelowcomb,
 uptackbelowcomb,
@@ -3371,6 +3369,7 @@ rmiddletildeturned,
 wturnedmod,
 lefttackmod,
 righttackmod,
+uni1DF0E,
 aa.pcap,
 Alphaprosgegrammeni.ad,
 Alphapsiliprosgegrammeni.ad,
@@ -3761,6 +3760,10 @@ omegadasiaoxiaypogegrammeni.sc.ad.ss06,
 omegapsiliperispomeniypogegrammeni.sc.ad.ss06,
 omegadasiaperispomeniypogegrammeni.sc.ad.ss06,
 omegaperispomeniypogegrammeni.sc.ad.ss06,
+u11AB0,
+u11AB1,
+Fstroke.hist,
+figurespace.tosf,
 anoteleia.sc,
 minus,
 cyrillicbreve.cap,
@@ -3798,6 +3801,7 @@ varia.sc,
 oxia.sc,
 perispomeni.sc,
 gravecomb.loclCYR,
+leftangleabovecomb.nonspacing,
 dieresiscomb.loclCYR.cap,
 dieresiscomb.loclCYR,
 acutecomb.loclCYR,
@@ -3891,8 +3895,6 @@ u107B7,
 u107B8,
 u107B9,
 u107BA,
-u11AB0,
-u11AB1,
 uni1DF00,
 uni1DF01,
 uni1DF02,
@@ -3907,7 +3909,6 @@ uni1DF0A,
 uni1DF0B,
 uni1DF0C,
 uni1DF0D,
-uni1DF0E,
 uni1DF0F,
 uni1DF10,
 uni1DF11,
