--- a/sources/NotoSerif-Italic.glyphspackage/order.plist
+++ b/sources/NotoSerif-Italic.glyphspackage/order.plist
@@ -2461,7 +2461,6 @@ Fscript,
 Mscript,
 Bflourish,
 Fstroke,
-Fstroke.hist,
 Aevolapuk,
 Oevolapuk,
 Uevolapuk,
@@ -3008,7 +3007,6 @@ acutebelowcomb,
 lefttackbelowcomb,
 righttackbelowcomb,
 leftangleabovecomb,
-leftangleabovecomb.nonspacing,
 horncomb,
 ringhalfleftbelowcomb,
 uptackbelowcomb,
@@ -3308,6 +3306,7 @@ rmiddletildeturned,
 wturnedmod,
 lefttackmod,
 righttackmod,
+uni1DF0E,
 aa.pcap,
 Alphaprosgegrammeni.ad,
 Alphapsiliprosgegrammeni.ad,
@@ -3698,6 +3697,10 @@ omegadasiaoxiaypogegrammeni.sc.ad.ss06,
 omegapsiliperispomeniypogegrammeni.sc.ad.ss06,
 omegadasiaperispomeniypogegrammeni.sc.ad.ss06,
 omegaperispomeniypogegrammeni.sc.ad.ss06,
+u11AB0,
+u11AB1,
+Fstroke.hist,
+figurespace.tosf,
 anoteleia.sc,
 minus,
 cyrillicbreve.cap,
@@ -3734,6 +3737,7 @@ dialytikaperispomeni.sc,
 varia.sc,
 oxia.sc,
 perispomeni.sc,
+leftangleabovecomb.nonspacing,
 dieresiscomb.loclCYR.cap,
 dieresiscomb.loclCYR.cap.narrow,
 dieresiscomb.loclCYR,
@@ -3827,8 +3831,6 @@ u107B7,
 u107B8,
 u107B9,
 u107BA,
-u11AB0,
-u11AB1,
 uni1DF00,
 uni1DF01,
 uni1DF02,
@@ -3843,7 +3845,6 @@ uni1DF0A,
 uni1DF0B,
 uni1DF0C,
 uni1DF0D,
-uni1DF0E,
 uni1DF0F,
 uni1DF10,
 uni1DF11,
