--- a/sources/NotoSerif.glyphspackage/order.plist
+++ b/sources/NotoSerif.glyphspackage/order.plist
@@ -2448,7 +2448,6 @@ Fscript,
 Mscript,
 Bflourish,
 Fstroke,
-Fstroke.hist,
 Aevolapuk,
 Oevolapuk,
 Uevolapuk,
@@ -2943,7 +2942,6 @@ acutebelowcomb,
 lefttackbelowcomb,
 righttackbelowcomb,
 leftangleabovecomb,
-leftangleabovecomb.nonspacing,
 horncomb,
 ringhalfleftbelowcomb,
 uptackbelowcomb,
@@ -3298,6 +3296,7 @@ rmiddletildeturned,
 wturnedmod,
 lefttackmod,
 righttackmod,
+uni1DF0E,
 aa.pcap,
 Alphaprosgegrammeni.ad,
 Alphapsiliprosgegrammeni.ad,
@@ -3688,7 +3687,9 @@ omegadasiaoxiaypogegrammeni.sc.ad.ss06,
 omegapsiliperispomeniypogegrammeni.sc.ad.ss06,
 omegadasiaperispomeniypogegrammeni.sc.ad.ss06,
 omegaperispomeniypogegrammeni.sc.ad.ss06,
+Fstroke.hist,
 zero.osf.slash,
+figurespace.tosf,
 anoteleia.sc,
 "paragraph-georgian",
 minus,
@@ -3728,6 +3729,7 @@ varia.sc,
 oxia.sc,
 perispomeni.sc,
 dieresiscomb.loclCYR,
+leftangleabovecomb.nonspacing,
 dieresiscomb.loclCYR.cap,
 dieresiscomb.loclCYR.cap.narrow,
 gravecomb.loclCYR,
@@ -3838,7 +3840,6 @@ uni1DF0A,
 uni1DF0B,
 uni1DF0C,
 uni1DF0D,
-uni1DF0E,
 uni1DF0F,
 uni1DF10,
 uni1DF11,
