--- a/sources/NotoSans.glyphspackage/order.plist
+++ b/sources/NotoSans.glyphspackage/order.plist
@@ -2166,7 +2166,6 @@ Fscript,
 Mscript,
 Bflourish,
 Fstroke,
-Fstroke.hist,
 Aevolapuk,
 Oevolapuk,
 Uevolapuk,
@@ -2716,7 +2715,6 @@ acutebelowcomb,
 lefttackbelowcomb,
 righttackbelowcomb,
 leftangleabovecomb,
-leftangleabovecomb.nonspacing,
 horncomb,
 ringhalfleftbelowcomb,
 uptackbelowcomb,
@@ -3784,13 +3782,17 @@ psilioxia_brevecomb,
 psilioxia_macronmod,
 dasiaoxia_brevecomb,
 dasiaoxia_macronmod,
+uni1DF0E,
 aa.pcap,
+Fstroke.hist,
 zero.osf.slash,
+figurespace.tosf,
 "paragraph-georgian",
 minus,
 cyrillicbreve.cap,
 gravecomb.loclCYR,
 dieresiscomb.loclCYR,
+leftangleabovecomb.nonspacing,
 dieresiscomb.loclCYR.cap,
 acutecomb.loclCYR,
 uni1AC5,
@@ -3898,7 +3900,6 @@ uni1DF0A,
 uni1DF0B,
 uni1DF0C,
 uni1DF0D,
-uni1DF0E,
 uni1DF0F,
 uni1DF10,
 uni1DF11,
