Change breve for cyrillicbreve when combining with Cyrillic script, fixes #38

--- a/sources/NotoSans-Italic.glyphspackage/fontinfo.plist
+++ b/sources/NotoSans-Italic.glyphspackage/fontinfo.plist
@@ -3805,6 +3805,7 @@ code = "script latn;
     sub fi by f_i.ss02;
     sub fl by f_l.ss02;
     script cyrl;
+	sub brevecomb by cyrillicbreve;
     language SRB;
     sub be-cy by be-cy.loclSRB;
     sub ge-cy by ge-cy.loclSRB;
@@ -3818,7 +3819,8 @@ code = "script latn;
     sub de-cy by de-cy.loclSRB;
     sub pe-cy by pe-cy.loclSRB;
     sub te-cy by te-cy.loclSRB;
-    sub gje-cy by gje-cy.loclMKD;";
+    sub gje-cy by gje-cy.loclMKD;
+";
 tag = locl;
 },
 {
