--- a/sources/NotoSerif.glyphspackage/fontinfo.plist
+++ b/sources/NotoSerif.glyphspackage/fontinfo.plist
@@ -3709,6 +3709,7 @@ code = "script latn;
     sub Beta by Beta-latin;
     sub beta by beta-latin;
     script cyrl;
+    sub brevecomb by cyrillicbreve;
     language SRB;
     sub be-cy by be-cy.loclSRB;
     language MKD;
