--- a/sources/NotoSans.glyphspackage/fontinfo.plist
+++ b/sources/NotoSans.glyphspackage/fontinfo.plist
@@ -3883,6 +3883,8 @@ featurePrefixes = (
 code = "languagesystem DFLT dflt;
 languagesystem cyrl dflt;
 languagesystem grek dflt;
+languagesystem grek IPPH;
+languagesystem grek APPH;
 languagesystem latn dflt;
 languagesystem latn CAT;
 languagesystem latn MOL;
@@ -4213,6 +4215,17 @@ code = "script latn;
     sub be-cy by be-cy.loclSRB;
     language MKD;
     sub be-cy by be-cy.loclSRB;
+    script grek;
+    language IPPH;
+    sub Chi by Chi-latin;
+    sub chi by chi-latin;
+    sub Beta by Beta-latin;
+    sub beta by beta-latin;
+    language APPH;
+    sub Chi by Chi-latin;
+    sub chi by chi-latin;
+    sub Beta by Beta-latin;
+    sub beta by beta-latin;
 ";
 tag = locl;
 },
