--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 git+https://github.com/notofonts/notobuilder
+git+https://github.com/googlefonts/glyphsLib@interpolate-components-with-intermediate
 drawbot-skia>=0.4.8
 sh>=1.14.2
 bumpfontversion
