--- a/sources/NotoSans.glyphspackage/order.plist
+++ b/sources/NotoSans.glyphspackage/order.plist
@@ -3782,11 +3782,12 @@ psilioxia_brevecomb,
 psilioxia_macronmod,
 dasiaoxia_brevecomb,
 dasiaoxia_macronmod,
-uni1DF0E,
 aa.pcap,
 "De-cy.loclBGR",
 "El-cy.loclBGR",
 "Ef-cy.loclBGR",
+"Zhe-cy.loclBGR",
+"Ka-cy.loclBGR",
 "ve-cy.loclBGR",
 "ge-cy.loclBGR",
 "de-cy.loclBGR",
@@ -3811,9 +3812,9 @@ minus,
 cyrillicbreve.cap,
 gravecomb.loclCYR,
 dieresiscomb.loclCYR,
+acutecomb.loclCYR,
 leftangleabovecomb.nonspacing,
 dieresiscomb.loclCYR.cap,
-acutecomb.loclCYR,
 uni1AC5,
 uni1AC7,
 uni1AC8,
@@ -3919,6 +3920,7 @@ uni1DF0A,
 uni1DF0B,
 uni1DF0C,
 uni1DF0D,
+uni1DF0E,
 uni1DF0F,
 uni1DF10,
 uni1DF11,
