--- a/sources/NotoSans.glyphspackage/fontinfo.plist
+++ b/sources/NotoSans.glyphspackage/fontinfo.plist
@@ -1,5 +1,5 @@
 {
-.appVersion = "3243";
+.appVersion = "3108";
 .formatVersion = 3;
 axes = (
 {
@@ -4925,7 +4925,6 @@ sub ycircumflex by ycircumflex.sc;
 sub zacute by zacute.sc;
 sub zdotaccent by zdotaccent.sc;
 sub zcaron by zcaron.sc;
-sub longs by s.sc;
 sub aringacute by aringacute.sc;
 sub aeacute by aeacute.sc;
 sub oslashacute by oslashacute.sc;
@@ -5144,7 +5143,6 @@ sub perispomeni by perispomeni.sc;
 sub gravecomb.loclCYR by gravecomb.sc;
 sub dieresiscomb.loclCYR by dieresiscomb.sc;
 sub acutecomb.loclCYR by acutecomb.sc;
-sub idotless by i.sc;
 ";
 tag = smcp;
 },
@@ -5892,6 +5890,7 @@ pre = 1;
 }
 );
 };
+visible = 1;
 },
 {
 axesValues = (
@@ -6639,7 +6638,7 @@ value = "536";
 }
 );
 instanceInterpolations = {
-"9FF96064-8718-4A86-A5C8-73C592101F67" = 0.20313;
+"9FF96064-8718-4A86-A5C8-73C592101F67" = 0.20312;
 "AB666A95-3AF9-4DE8-B258-097FFCFE8A59" = 0.79688;
 };
 name = ExtraLight;
@@ -7569,7 +7568,7 @@ value = "536";
 );
 instanceInterpolations = {
 "029FEF0C-5FA4-4A3E-AC23-838A1147A554" = 0.79688;
-"36F3C8CB-53EE-4548-BFDE-2C03212BACAA" = 0.20313;
+"36F3C8CB-53EE-4548-BFDE-2C03212BACAA" = 0.20312;
 };
 name = "ExtraCondensed ExtraLight";
 weightClass = 200;
