--- a/sources/NotoSans.glyphspackage/fontinfo.plist
+++ b/sources/NotoSans.glyphspackage/fontinfo.plist
@@ -1,5 +1,5 @@
 {
-.appVersion = "3108";
+.appVersion = "3243";
 .formatVersion = 3;
 axes = (
 {
@@ -4250,6 +4250,7 @@ code = "script latn;
 	sub ze-cy by ze-cy.loclBGR;
 	sub ii-cy by ii-cy.loclBGR;
 	sub iishort-cy by iishort-cy.loclBGR;
+	sub iigrave-cy by iigrave-cy.loclBGR;
 	sub ka-cy by ka-cy.loclBGR;
 	sub el-cy by el-cy.loclBGR;
 	sub pe-cy by pe-cy.loclBGR;
@@ -4259,6 +4260,7 @@ code = "script latn;
 	sub shcha-cy by shcha-cy.loclBGR;
 	sub softsign-cy by softsign-cy.loclBGR;
 	sub hardsign-cy by hardsign-cy.loclBGR;
+	sub iu-cy by iu-cy.loclBGR;
 ";
 tag = locl;
 },
@@ -5772,6 +5774,7 @@ code = "	sub De-cy by De-cy.loclBGR;
 	sub ze-cy by ze-cy.loclBGR;
 	sub ii-cy by ii-cy.loclBGR;
 	sub iishort-cy by iishort-cy.loclBGR;
+	sub iigrave-cy by iigrave-cy.loclBGR;
 	sub ka-cy by ka-cy.loclBGR;
 	sub el-cy by el-cy.loclBGR;
 	sub pe-cy by pe-cy.loclBGR;
@@ -5780,7 +5783,10 @@ code = "	sub De-cy by De-cy.loclBGR;
 	sub sha-cy by sha-cy.loclBGR;
 	sub shcha-cy by shcha-cy.loclBGR;
 	sub softsign-cy by softsign-cy.loclBGR;
-	sub hardsign-cy by hardsign-cy.loclBGR;";
+	sub hardsign-cy by hardsign-cy.loclBGR;
+	sub iu-cy by iu-cy.loclBGR;
+
+";
 labels = (
 {
 language = dflt;
@@ -5890,7 +5896,6 @@ pre = 1;
 }
 );
 };
-visible = 1;
 },
 {
 axesValues = (
@@ -6638,7 +6643,7 @@ value = "536";
 }
 );
 instanceInterpolations = {
-"9FF96064-8718-4A86-A5C8-73C592101F67" = 0.20312;
+"9FF96064-8718-4A86-A5C8-73C592101F67" = 0.20313;
 "AB666A95-3AF9-4DE8-B258-097FFCFE8A59" = 0.79688;
 };
 name = ExtraLight;
@@ -7568,7 +7573,7 @@ value = "536";
 );
 instanceInterpolations = {
 "029FEF0C-5FA4-4A3E-AC23-838A1147A554" = 0.79688;
-"36F3C8CB-53EE-4548-BFDE-2C03212BACAA" = 0.20312;
+"36F3C8CB-53EE-4548-BFDE-2C03212BACAA" = 0.20313;
 };
 name = "ExtraCondensed ExtraLight";
 weightClass = 200;
