--- a/sources/NotoSans.glyphspackage/order.plist
+++ b/sources/NotoSans.glyphspackage/order.plist
@@ -3782,6 +3782,7 @@ psilioxia_brevecomb,
 psilioxia_macronmod,
 dasiaoxia_brevecomb,
 dasiaoxia_macronmod,
+uni1DF0E,
 aa.pcap,
 "De-cy.loclBGR",
 "El-cy.loclBGR",
@@ -3804,6 +3805,8 @@ aa.pcap,
 "shcha-cy.loclBGR",
 "softsign-cy.loclBGR",
 "hardsign-cy.loclBGR",
+"iigrave-cy.loclBGR",
+"iu-cy.loclBGR",
 Fstroke.hist,
 zero.osf.slash,
 figurespace.tosf,
@@ -3812,9 +3815,9 @@ minus,
 cyrillicbreve.cap,
 gravecomb.loclCYR,
 dieresiscomb.loclCYR,
-acutecomb.loclCYR,
 leftangleabovecomb.nonspacing,
 dieresiscomb.loclCYR.cap,
+acutecomb.loclCYR,
 uni1AC5,
 uni1AC7,
 uni1AC8,
@@ -3920,7 +3923,6 @@ uni1DF0A,
 uni1DF0B,
 uni1DF0C,
 uni1DF0D,
-uni1DF0E,
 uni1DF0F,
 uni1DF10,
 uni1DF11,
