Redrawing/Editing Cyrillic characters (6 Masters)
Various changes in contours and/or metrics of Cyrillic Basic set, on 6 masters, uppercase and lowercase.

--- a/sources/NotoSans.glyphspackage/fontinfo.plist
+++ b/sources/NotoSans.glyphspackage/fontinfo.plist
@@ -1,5 +1,5 @@
 {
-.appVersion = "3251";
+.appVersion = "3259";
 .formatVersion = 3;
 axes = (
 {
@@ -5995,6 +5995,7 @@ pre = 1;
 }
 );
 };
+visible = 1;
 },
 {
 axesValues = (
