--- a/sources/NotoSans.glyphspackage/fontinfo.plist
+++ b/sources/NotoSans.glyphspackage/fontinfo.plist
@@ -1,5 +1,5 @@
 {
-.appVersion = "3303";
+.appVersion = "3260";
 .formatVersion = 3;
 axes = (
 {
@@ -17476,9 +17476,73 @@ name = vStem0;
 unitsPerEm = 1000;
 userData = {
 GSDimensionPlugin.Dimensions = {
+"029FEF0C-5FA4-4A3E-AC23-838A1147A554" = {
+HH = "25";
+HV = "26";
+OH = "25";
+OV = "26";
+nV = "26";
+nd = "24";
+oH = "25";
+oV = "26";
+tH = "24";
+};
 "0A718E2F-231D-484E-9433-16A5230D2CE8" = {
+HH = "158";
+HV = "194";
+OH = "161";
+OV = "203";
+nV = "191";
+nd = "150";
+oH = "142";
+oV = "194";
+tH = "143";
+};
+"36F3C8CB-53EE-4548-BFDE-2C03212BACAA" = {
+HH = "76";
+HV = "84";
+OH = "76";
+OV = "89";
+nV = "81";
+nd = "72";
+oH = "71";
+oV = "83";
+tH = "68";
 };
 "876CB7B0-00C3-486C-9A47-43D2BE8A6B3C" = {
+};
+"98E204A9-1C79-49C7-AB3E-40A925F56409" = {
+HH = "146";
+HV = "170";
+OH = "146";
+OV = "177";
+nV = "162";
+nd = "144";
+oH = "135";
+oV = "164";
+tH = "133";
+};
+"9FF96064-8718-4A86-A5C8-73C592101F67" = {
+HH = "79";
+HV = "90";
+OH = "79";
+OV = "95";
+nV = "88";
+nd = "74";
+oH = "74";
+oV = "91";
+tH = "68";
+};
+"AB666A95-3AF9-4DE8-B258-097FFCFE8A59" = {
+HH = "25";
+HV = "26";
+OH = "25";
+OV = "27";
+nV = "26";
+nd = "25";
+oH = "25";
+oV = "27";
+tH = "25";
 };
 UUID0 = {
 };
