--- a/sources/NotoSansMono.glyphspackage/fontinfo.plist
+++ b/sources/NotoSansMono.glyphspackage/fontinfo.plist
@@ -2634,6 +2634,7 @@ seven.osf,
 eight.osf,
 nine.osf,
 zero.slash,
+zero.noslash,
 zero.dnom,
 one.dnom,
 two.dnom,
@@ -4727,9 +4728,15 @@ code = "sub partialdiff by partialdiff.mir;
 tag = rtlm;
 },
 {
-code = "# zero.slash alternate
-    sub zero by zero.slash;";
-tag = zero;
+code = "# zero.noslash alternate
+    sub zero by zero.noslash;";
+labels = (
+{
+language = dflt;
+value = "Unslashed zero";
+}
+);
+tag = ss01;
 },
 {
 automatic = 1;
