--- a/sources/NotoSans.glyphspackage/fontinfo.plist
+++ b/sources/NotoSans.glyphspackage/fontinfo.plist
@@ -1,5 +1,5 @@
 {
-.appVersion = "3315";
+.appVersion = "3260";
 .formatVersion = 3;
 axes = (
 {
@@ -5995,6 +5995,7 @@ pre = 1;
 }
 );
 };
+visible = 1;
 },
 {
 axesValues = (
