[Sans Italic] further improvements on Cyrillic
Based on Aleksandra's reviews.

--- a/sources/NotoSans-Italic.glyphspackage/fontinfo.plist
+++ b/sources/NotoSans-Italic.glyphspackage/fontinfo.plist
@@ -1,5 +1,5 @@
 {
-.appVersion = "3316";
+.appVersion = "3260";
 .formatVersion = 3;
 axes = (
 {
@@ -5212,6 +5212,7 @@ pre = 1;
 }
 );
 };
+visible = 1;
 },
 {
 axesValues = (
